<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:id="@+id/main_rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

            <ImageView
                    android:padding="5dp"
                    android:src="@drawable/download_icon"
                    android:layout_width="65dp"
                    android:layout_height="65dp" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">

                <TextView
                        android:id="@+id/file_title"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingTop="10dp"
                        android:text="@string/file_name"
                        android:textStyle="normal|bold" />

                <ProgressBar
                        android:id="@+id/file_progress"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progress="50"
                        android:progressBackgroundTint="@color/green500"
                        android:progressTint="@color/green600"
                        />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_weight="1"
                            android:text="@string/downloaded_15mb"
                            android:layout_width="match_parent"
                            android:id="@+id/file_size"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_height="wrap_content" />

                    <TextView
                            android:layout_weight="1"
                            android:text="@string/pending"
                            android:gravity="end"
                            android:id="@+id/file_status"
                            android:layout_width="match_parent"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_height="wrap_content"
                            android:textStyle="normal|bold" />
                </LinearLayout>

                <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <Button
                            android:id="@+id/pause_resume"
                            android:text="@string/pause"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:padding="0dp"
                            android:layout_height="26dp"
                            android:background="@drawable/rounded"
                            app:backgroundTint="@color/green600"
                            android:textColor="@color/text_white"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold" />

                    <Button
                            android:id="@+id/remove_btn"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="26dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/pause_resume"
                            android:background="@drawable/rounded"
                            android:padding="0dp"
                            android:text="@string/remove"
                            android:textColor="@color/text_white"
                            android:textStyle="bold"
                            app:backgroundTint="@color/red500" />

                    <Button
                            android:id="@+id/sharefile"
                            android:text="@string/share"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:padding="0dp"
                            android:layout_height="26dp"
                            android:background="@drawable/rounded_transparent"
                            app:backgroundTint="@color/green600"
                            android:textColor="@color/green600"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_alignParentEnd="true"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>